--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,11 +37,11 @@
   "skills_desc":"I possess advanced development and programming skills.",
   "skills_details":"Through years of experience and acquired knowledge, I have worked on projects where the fusion of innovation and functionality was the primary goal. From frontend design to shaping user experiences and crafting rock-solid backend architectures, I strive to make you feel right at home in the digital realm. With my keen eye and penchant for detail, I create web applications that are not only aesthetically pleasing and user-friendly but also exceptionally efficient and scalable thanks to high-quality coding.",
   "client_testimonials":"Client testimonials",
-  "pesti_rajmund_testimonial":"The error tracking application has brought such simplicity and efficiency to our daily work that we couldn't have imagined before. Péter Holecz's attention to detail and understanding of customer needs truly sets him apart in the industry. During our collaboration, he was always flexible, and we could work together easily, understanding exactly what we needed.",
+  "pesti_rajmund_testimonial":"The website Peti created for me is simply stunning. Péter is extremely talented in full-stack development. If you're truly looking for a top-quality web developer who not only understands the technology but also your problems, Peti is the person you're looking for.",
   "pesti_rajmund_designation":"Computer specialist",
-  "vivienphoto_testimonial":"The website Peti created for me is simply stunning. Péter is extremely talented in full-stack development. If you're truly looking for a top-quality web developer who not only understands the technology but also your problems, Peti is the person you're looking for.",
+  "vivienphoto_testimonial":"Throughout our collaboration, Peti was always patient and did everything to ensure that my website turned out just the way I envisioned it. The end result reflects the essence and beauty of my work.",
   "vivienphoto_designation":"Photographer",
-  "hechinger_testimonial":"Throughout our collaboration, Peti was always patient and did everything to ensure that my website turned out just the way I envisioned it. The end result reflects the essence and beauty of my work.",
+  "hechinger_testimonial":"The error tracking application has brought such simplicity and efficiency to our daily work that we couldn't have imagined before. Péter Holecz's attention to detail and understanding of customer needs truly sets him apart in the industry. During our collaboration, he was always flexible, and we could work together easily, understanding exactly what we needed.",
   "hechinger_designation":"Quality Control Manager",
   "work_together":"Let's work together!",
   "open_contact":"Make an enquiry",
