--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -41,7 +41,7 @@
     "pesti_rajmund_designation":"Informatikus",
     "vivienphoto_testimonial":"Az együttműködésünk során Peti mindig türelmes volt, és mindent megtett annak érdekében, hogy a weboldalam olyan legyen, amilyennek elképzeltem. A végeredmény olyan lett, amely tükrözi a munkám lényegét és szépségét.",
     "vivienphoto_designation":"Fotós",
-    "hechinger_testimonial":"Az együttműködésünk során Peti mindig türelmes volt, és mindent megtett annak érdekében, hogy a weboldalam olyan legyen, amilyennek elképzeltem. A végeredmény olyan lett, amely tükrözi a munkám lényegét és szépségét.",
+    "hechinger_testimonial":"A hibaösszesítő alkalmazás olyan egyszerűséget és hatékonyságot hozott a mindennapi munkánkba, amit korábban elképzelni sem mertünk. Holecz Péter figyelme a részletekre és az ügyfelek igényeinek megértése valóban megkülönbözteti őt a szakmában. A közös munka során mindig rugalmas volt, könnyen együtt tudtunk dolgozni és megértette, hogy pontosan mire van szükségünk.",
     "hechinger_designation":"Minőségirányítási vezető",
     "work_together":"Dolgozzunk együtt!",
     "open_contact":"Érdeklődjön",
